--- a/server/.env.default
+++ b/server/.env.default
@@ -1,4 +1,4 @@
-NODE_ENV=
-PORT=
-DATABASE_URL=
-JWT_SECRET=
+NODE_ENV=dev
+PORT=8000
+DATABASE_URL=mongodb+srv://vamshiii2795:vamshiii@cluster0.zlhoo.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=2795
