--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -14,7 +14,7 @@
 
     /* Language and Environment */
     "target": "ESNext" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
-     "lib": ["ES2020", "DOM"],                                       /* Specify a set of bundled library declaration files that describe the target runtime environment. */
+     "lib": ["ES2020", "DOM","ESNext"],                                       /* Specify a set of bundled library declaration files that describe the target runtime environment. */
     // "jsx": "preserve",                                /* Specify what JSX code is generated. */
     // "experimentalDecorators": true,                   /* Enable experimental support for legacy experimental decorators. */
     // "emitDecoratorMetadata": true,                    /* Emit design-type metadata for decorated declarations in source files. */
@@ -33,8 +33,11 @@
     // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
     // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
-   "typeRoots": ["./node_modules/@types"],                                 /* Specify multiple folders that act like './node_modules/@types'. */
-    "types": ["node"],                                      /* Specify type package names to be included without being referenced in a source file. */
+   "typeRoots": ["./node_modules/@types"],  
+   
+   "types": ["node"],                                      /* Specify type package names to be included without being referenced in a source file. */
+   
+   /* Specify multiple folders that act like './node_modules/@types'. */
     // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
     // "moduleSuffixes": [],                             /* List of file name suffixes to search when resolving a module. */
     // "allowImportingTsExtensions": true,               /* Allow imports to include TypeScript file extensions. Requires '--moduleResolution bundler' and either '--noEmit' or '--emitDeclarationOnly' to be set. */
